--- a/Fraud-workaround.ipynb
+++ b/Fraud-workaround.ipynb
@@ -9,7 +9,7 @@
     "This notebook is here just to address a Brev issue that it does not allow a Private repo to be used in an instance.\n",
     "For the launch version, this step will __not__ be needed.  \n",
     "\n",
-    "What this notebook simply clones the private repo into your Brev instance.  "
+    "This notebook simply clones the private repo into your Brev instance.  "
    ]
   },
   {
