--- a/Fraud-workaround.ipynb
+++ b/Fraud-workaround.ipynb
@@ -6,8 +6,11 @@
    "metadata": {},
    "source": [
     "# Brev Workaround\n",
+    "\n",
+    "___This is NOT part of the User Experiance___\n",
+    "\n",
     "This notebook is here just to address a Brev issue that it does not allow a Private repo to be used in an instance.\n",
-    "For the launch version, this step will __not__ be needed.  \n",
+    "Once the product is launced, the repo will be public and this step will __not__ be needed.  \n",
     "\n",
     "This notebook simply clones the private repo into your Brev instance.  "
    ]
@@ -70,12 +73,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c52698d7-4e14-41d3-a98f-a62e8f624f36",
+   "cell_type": "markdown",
+   "id": "617fd323-0981-49e2-bf91-a56f77db91d1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "README:    Financial-Fraud-Detection/README.md\n",
+    "\n",
+    "Notebook:  Financial-Fraud-Detection/notebooks/financial-fraud-usage.ipynb"
+   ]
   }
  ],
  "metadata": {
